tests/unit/fake_data_root/sos_commands/networking/ip_netns_exec_qdhcp-cacd8542-5940-473d-aff9-15c85ca4b40b_ip6tables-save
# Generated by ip6tables-save v1.8.4 on Tue Aug  3 10:32:12 2021
*raw
:PREROUTING ACCEPT [53:3368]
:OUTPUT ACCEPT [2:152]
:neutron-dhcp-age-OUTPUT - [0:0]
:neutron-dhcp-age-PREROUTING - [0:0]
-A PREROUTING -j neutron-dhcp-age-PREROUTING
-A OUTPUT -j neutron-dhcp-age-OUTPUT
COMMIT
# Completed on Tue Aug  3 10:32:12 2021
# Generated by ip6tables-save v1.8.4 on Tue Aug  3 10:32:12 2021
*mangle
:PREROUTING ACCEPT [53:3368]
:INPUT ACCEPT [10:720]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2:152]
:POSTROUTING ACCEPT [2:152]
:neutron-dhcp-age-FORWARD - [0:0]
:neutron-dhcp-age-INPUT - [0:0]
:neutron-dhcp-age-OUTPUT - [0:0]
:neutron-dhcp-age-POSTROUTING - [0:0]
:neutron-dhcp-age-PREROUTING - [0:0]
-A PREROUTING -j neutron-dhcp-age-PREROUTING
-A INPUT -j neutron-dhcp-age-INPUT
-A FORWARD -j neutron-dhcp-age-FORWARD
-A OUTPUT -j neutron-dhcp-age-OUTPUT
-A POSTROUTING -j neutron-dhcp-age-POSTROUTING
-A neutron-dhcp-age-POSTROUTING -p udp -m udp --dport 546 -j CHECKSUM --checksum-fill
COMMIT
# Completed on Tue Aug  3 10:32:12 2021
# Generated by ip6tables-save v1.8.4 on Tue Aug  3 10:32:12 2021
*filter
:INPUT ACCEPT [10:720]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [2:152]
:neutron-dhcp-age-FORWARD - [0:0]
:neutron-dhcp-age-INPUT - [0:0]
:neutron-dhcp-age-OUTPUT - [0:0]
:neutron-dhcp-age-local - [0:0]
:neutron-filter-top - [0:0]
-A INPUT -j neutron-dhcp-age-INPUT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-dhcp-age-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-dhcp-age-OUTPUT
-A neutron-filter-top -j neutron-dhcp-age-local
COMMIT
# Completed on Tue Aug  3 10:32:12 2021
